# diginori-api

./: Procfile  README.md  dump.rdb  pyproject.toml  release.md  requirements.txt  sqllite.db  start.sh
diginori_api/: main.py
diginori_api/database/: crud.py
diginori_api/internal/: lotto.py
tests/diginori_api/database/: test_crud.py
tests/internal/: test_lotto.py
